# ML_lab1

./: .gitignore  README.md  enhanced_submission.csv  notebook.ipynb  pyproject.toml  submission.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: notebook.ipynb
spaceship_classifier/: _init_.py  model.py
