[tool.poetry]
name = "spaceship-classifier"
version = "0.1.0"
description = "ML models for the Spaceship Titanic challenge"
authors = ["Dark-Type <skazhutin.n@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
xgboost = "^1.7.0"
optuna = "^3.0.0"
fire = "^0.5.0"
matplotlib = "^3.7.0"
clearml = {version = "^1.10.0", optional = true}

[tool.poetry.extras]
clearml = ["clearml"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spaceship-classifier = "spaceship_classifier.model:main"